# datahub-changeguard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  demo_data.py  graph.py  llm.py  main.py  models.py
app/agents/: changeguard.py
app/integrations/: datahub.py
app/static/: app.js  index.html  styles.css
examples/: drop-total-amount.json
scripts/: build_demo_video.py
submission/: DEMO_NARRATION_EN.txt  DEMO_SCRIPT_ZH.md  DEVPOST.md  JUDGING_CHECKLIST.md
tests/: test_changeguard.py  test_datahub_adapter.py
